--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.14",
+    "@types/papaparse": "^5.2.4",
+    "@types/plotly.js": "^1.54.7",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-plotly.js": "^2.2.4",
+    "@types/recharts": "^1.8.19",
+    "fp-ts": "^2.9.3",
+    "papaparse": "^5.3.0",
+    "plotly.js": "^1.58.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "4.0.1",
+    "recharts": "^2.0.3",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
